k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes:
      - name: mongodbdata
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
      - name: database
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodbdata
          mountPath: /data/db
