k8s/db-clusterip.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-clusterip
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
