k8s/frontend-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-nodeport
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 3050
      targetPort: 3000
      nodePort: 31515
